# Simple-KV

./: Cargo.toml  README.md  build.rs
benches/: benches.rs
benches/suites/: client.rs  mod.rs
src/: client.rs  main.rs  server.rs
src/proto/: eraftpb.proto  kvraft.proto  kvraft.rs  kvraft_grpc.rs  mod.rs
src/server/: main.rs  proposal.rs  raft_node.rs  server.rs
