[package]
name = "simple-kv"
version = "0.1.0"
authors = ["syj <Sunyuejun_7@outlook.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proto"
path = "src/proto/mod.rs"


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
#grpcio = { version = "0.7", default-features = false, features = ["openssl-vendored"] }
grpcio = "0.6"
protobuf = { version = "2.8", features = ["with-bytes"] }
quick-error = "1.2.3"
#raft = {version = "0.6.0-alpha", default-features = false }
#raft-proto = {version = "0.6.0-alpha", default-features = false }

#raft-proto = "0.4.1"
#raft-proto = "0.6.0-alpha"
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_with = "1.4"
regex = "1"
slog = "2.2"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-stdlog = "4"
slog-term = "2.4.0"
#slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
#slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
raft = "0.6.0-alpha"
raft-proto = "0.6.0-alpha"

[patch.crates-io]
raft = { git = "https://github.com/tikv/raft-rs", branch = "master", default-features = false }
raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master", default-features = false }

#[features]
#default = ["protobuf-codec"]
#prost-codec = ["raft-proto/prost-codec"]
#protobuf-codec = ["raft-proto/protobuf-codec"]

[build-dependencies]
protoc-grpcio = "3.0.0"
#protoc-grpcio = "3.0.0"
#protoc-rust-grpc = "0.2.1"